# godelta

./: README.md  go.mod  main_dynamic.go  main_static.go
lib/: .gitignore
lib/delta/: Cargo.toml
lib/delta/src/: delta.rs  main.rs
