[package]
name = "delta"
version = "0.1.0"
authors = ["pilillo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
deltalake = "0.4.0"
tokio = { version = "1.13.0", features = ["full"] }


[build-dependencies]
cbindgen = "0.20.0"
